updates graphics, fixes shift button bug, reduces linebreaks in app.js formatting

--- a/css/main.css
+++ b/css/main.css
@@ -69,8 +69,8 @@ canvas,
 /*
 * - Grow Animation -
 */
-.grow:hover {	
-	transform: scale(2);
+#playerSubmit.grow:hover {	
+	transform: scale(1.5);
 }
 
 /*
